add ex1 m files

--- a/template.html
+++ b/template.html
@@ -14,7 +14,7 @@
       </div> -->
       {% top_data %}
     </div>
-    <p class="title">worst wrong images</p>
+    <p class="title">wrong images</p>
     <div class="container">
       {% worst_data %}
     </div>
